Disabled reporting from Gradle Tests