@@ -1,3 +1,13 @@
+buildscript {
+    ext.kotlin_version = '0.7.270'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
@@ -26,20 +36,26 @@ sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 
 }
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.spek:spek:0.1.118"
 
 }
-buildscript {
-    ext.kotlin_version = '0.7.270'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+
+
+test {
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    reports.junitXml.enabled = false
+    reports.html.enabled = false
 }
 
 task wrapper(type: Wrapper) {
